# VideoFrameReview

./: CMakeLists.txt  README.md
res/: views.qrc
res/views/: MasterView.qml
src/: cvclass.cpp  cvclass.h  framemodel.cpp  framemodel.h  frameprovider.cpp  frameprovider.h  main.cpp  modelmanager.cpp  modelmanager.h  threadgetframes.cpp  threadgetframes.h
